add: registration, and add links to tdk, and fix some bugs

--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -4586,8 +4586,10 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         <h4> Gold Corporate Sponsors</h4>
                         <ul>
                             <li>
-                                <img class="img-responsive" src="assets/img/logos/TDK.png"
+                                <a href="https://www.tdk.com/" target="_blank">
+                                    <img class="img-responsive" src="assets/img/logos/TDK.png"
                                     style="width: 100%; margin-top: 10%;">
+                                </a>
                             </li>
                             <hr>
                             <li>
@@ -4632,12 +4634,6 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                     <div class="links">
                         <h4>Co-located Conferences</h4>
                         <ul>
-                            <!-- <li>
-                                <a href="http://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">
-                                    <span style='font-size:20px;'>&#128206;
-                                    The 11<sup>th</sup> IEEE International Conference on Collaboration and Internet Computing (IEEE CIC 2025)</span>
-                                </a>
-                            </li> -->
                             <li>
                                 <a href="http://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">
 
@@ -4662,46 +4658,10 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                             </li>
                         </ul>
                     </div>
-                    <!-- <iframe name="f99218c3348b54" title="fb:page Facebook Social Plugin" frameborder="0"
-                            allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media"
-                            src="https://www.facebook.com/v5.0/plugins/page.php?adapt_container_width=true&amp;app_id=&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D44%23cb%3Df2ce30841cd05e%26domain%3D%26origin%3Dfile%253A%252F%252F%252Ff1d62ad0a1fab14%26relation%3Dparent.parent&amp;height=650&amp;hide_cover=true&amp;href=https%3A%2F%2Fwww.facebook.com%2Fsigir2020&amp;locale=en_us&amp;sdk=joey&amp;show_facepile=true&amp;small_header=true&amp;tabs=timeline"
-                            style="border: none; visibility: visible; width:100%; height: 650px;" class="">
-                        </iframe> -->
-                    <!-- ===== social media icons END -->
                 </div>
                 <br>
-                <!-- <div class="tile">
-                        <a class="btn-u btn-u-green btn-u-xs" alt="sigir2020 @sigir2020 WeChat profile" target="_blank" style="margin-left: 5%;"><i class="fa fa-wechat"></i>
-                            Follow us on WeChat.</a>
-                        <a class="btn-u btn-u-yellow btn-u-xs" href="https://www.weibo.com/u/7473346537"
-                            alt="sigir2020 @sigir2020 Weibo profile" target="_blank" style="margin-left: 4%;"> <i class="fa fa-weibo"></i>
-                            Follow us on Weibo.</a>
-                    </div>
-                    <img src="assets/img/WeChat_qr.jpg" style="width: 41%; margin-top: 3%; margin-left: 7%; ">
-                    <img src="assets/img/Weibo_qr.png" style="width: 35%; margin-top: 3%; margin-left: 8%; "> -->
             </div>
-            <!--Logos-->
-
-
-
-            <!-- <div class="col-md-6 col-xs-12">
-                        <div class="row">
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/Xidian_University.png" style="width: 95%; margin-top: 2%; margin-left: 5%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/cas.png" style="width: 92%; margin-top: 2%; margin-left: 10%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/jilin_university.jpg" style="width: 92%; margin-top: 2%; margin-left: 5%;">
-                            </div>
-                            <div class="col-md-3 col-xs-3">
-                                <img class="img-responsive" src="assets/img/logos/thu.jpg" style="width: 92%; margin-top: 2%;">
-                            </div>
-                        </div>
-                    </div> -->
         </div>
-        <!--Logos END-->
     </div>
 
 
